--- a/docker/conf.d/afs-celerybeat.conf
+++ b/docker/conf.d/afs-celerybeat.conf
@@ -3,7 +3,7 @@
 ; ================================
 
 [program:celerybeat]
-    command=python3 -m celery -A afs.celery beat --loglevel=INFO 
+    command=python3 -m celery -A arches_for_science.celery beat --loglevel=INFO 
     directory=/web_root/afs
 
     user=root
