--- a/docker/conf.d/afs-celeryd.conf
+++ b/docker/conf.d/afs-celeryd.conf
@@ -3,7 +3,7 @@
 ; ==================================
 
 [program:celery]
-    command=python3 -m celery -A afs.celery worker --loglevel=INFO
+    command=python3 -m celery -A arches_for_science.celery worker --loglevel=INFO
     directory=/web_root/afs
 
     user=root
