--- a/docker/env_file.env
+++ b/docker/env_file.env
@@ -1,5 +1,5 @@
 #arches
-ARCHES_PROJECT=afs
+ARCHES_PROJECT=arches_for_science
 INSTALL_DEFAULT_GRAPHS=False
 INSTALL_DEFAULT_CONCEPTS=False
 PGUSERNAME=postgres
