--- a/docker/webpack/env_file.env
+++ b/docker/webpack/env_file.env
@@ -1,6 +1,6 @@
 
 NODE_OPTIONS=--max-old-space-size=10000
-ARCHES_PROJECT=afs
+ARCHES_PROJECT=arches_for_science
 
 #arches
 INSTALL_DEFAULT_GRAPHS=False
