--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
 ]
 requires-python = ">=3.9"
 dependencies = [
-  "arches>=7.5.0a0",
+  "arches>=7.5.0a0,<7.5.1",
   "supervisor==4.2.1",
   "django-storages==1.13.2",
   "boto3==1.25.3",
