fixes inherent race condition; adds custom uppy plugin; works with django storages

--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     },
     "version": "1.1.0",
     "dependencies": {
-        "@uppy/aws-s3-multipart": "^2.4.1",
-        "@uppy/core": "^2.3.1",
-        "@uppy/dashboard": "^2.4.0",
-        "@uppy/drag-drop": "^2.1.2",
-        "@uppy/progress-bar": "^2.1.1",
+        "@uppy/aws-s3": "^3.3.1",
+        "@uppy/core": "^3.5.1",
+        "@uppy/dashboard": "^3.5.4",
+        "@uppy/drag-drop": "^3.0.3",
+        "@uppy/progress-bar": "^3.0.3",
         "arches": "archesproject/arches#dev/7.5.x",
         "dom-to-image": "^2.6.0",
         "html2canvas": "^1.4.1",
