--- a/arches_for_science/pkg/extensions/plugins/project-report-workflow/project-report-workflow.json
+++ b/arches_for_science/pkg/extensions/plugins/project-report-workflow/project-report-workflow.json
@@ -4,7 +4,14 @@
     "icon": "fa fa-paperclip",
     "component": "views/components/plugins/project-report-workflow",
     "componentname": "project-report-workflow",
-    "config": {"show": false},
+    "config": {
+        "show": false, 
+        "is_workflow": true,
+        "thumbnailBackgroundColor": "#3e89cd",
+        "thumbnailCircleColor": "#6ea7d9",
+        "description": "Project Report Workflow"
+    },
     "slug": "project-report-workflow",
-    "sortorder": 1
+    "sortorder": 1,
+    "helptemplate": "project-report-workflow-help"
 }
