--- a/arches_for_science/pkg/graphs/resource_models/Project.json
+++ b/arches_for_science/pkg/graphs/resource_models/Project.json
@@ -3468,7 +3468,7 @@
                         "descriptor_types": {
                             "description": {
                                 "nodegroup_id": "0b92a414-ca85-11e9-b725-a4d18cec433a",
-                                "string_template": "<Statement_content>"
+                                "string_template": "<statement_content>"
                             },
                             "map_popup": {
                                 "nodegroup_id": "",
@@ -3476,7 +3476,7 @@
                             },
                             "name": {
                                 "nodegroup_id": "0b926359-ca85-11e9-ac9c-a4d18cec433a",
-                                "string_template": "<Name_content>"
+                                "string_template": "<name_content>"
                             }
                         },
                         "triggering_nodegroups": []
